fix: scrollbar

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -22,6 +22,7 @@ html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  overflow-y: overlay;
 }
 
 body {
